--- a/spark_definitive_guide.ipynb
+++ b/spark_definitive_guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,13 +14,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Intro\n",
+    "\n",
+    "\n",
     "https://github.com/databricks/Spark-The-Definitive-Guide/tree/master/data\n",
     "https://github.com/VolodymyrGavrysh/My_RoadMap_Data_Science/blob/master/kds/books/Spark-The%20Definitive%20Guide.pdf\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,10 +45,127 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "toDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(Number=0),\n",
+       " Row(Number=1),\n",
+       " Row(Number=2),\n",
+       " Row(Number=3),\n",
+       " Row(Number=4),\n",
+       " Row(Number=5),\n",
+       " Row(Number=6),\n",
+       " Row(Number=7),\n",
+       " Row(Number=8),\n",
+       " Row(Number=9),\n",
+       " Row(Number=10),\n",
+       " Row(Number=11),\n",
+       " Row(Number=12),\n",
+       " Row(Number=13),\n",
+       " Row(Number=14),\n",
+       " Row(Number=15),\n",
+       " Row(Number=16),\n",
+       " Row(Number=17),\n",
+       " Row(Number=18),\n",
+       " Row(Number=19),\n",
+       " Row(Number=20),\n",
+       " Row(Number=21),\n",
+       " Row(Number=22),\n",
+       " Row(Number=23),\n",
+       " Row(Number=24),\n",
+       " Row(Number=25),\n",
+       " Row(Number=26),\n",
+       " Row(Number=27),\n",
+       " Row(Number=28),\n",
+       " Row(Number=29),\n",
+       " Row(Number=30),\n",
+       " Row(Number=31),\n",
+       " Row(Number=32),\n",
+       " Row(Number=33),\n",
+       " Row(Number=34),\n",
+       " Row(Number=35),\n",
+       " Row(Number=36),\n",
+       " Row(Number=37),\n",
+       " Row(Number=38),\n",
+       " Row(Number=39),\n",
+       " Row(Number=40),\n",
+       " Row(Number=41),\n",
+       " Row(Number=42),\n",
+       " Row(Number=43),\n",
+       " Row(Number=44),\n",
+       " Row(Number=45),\n",
+       " Row(Number=46),\n",
+       " Row(Number=47),\n",
+       " Row(Number=48),\n",
+       " Row(Number=49),\n",
+       " Row(Number=50),\n",
+       " Row(Number=51),\n",
+       " Row(Number=52),\n",
+       " Row(Number=53),\n",
+       " Row(Number=54),\n",
+       " Row(Number=55),\n",
+       " Row(Number=56),\n",
+       " Row(Number=57),\n",
+       " Row(Number=58),\n",
+       " Row(Number=59),\n",
+       " Row(Number=60),\n",
+       " Row(Number=61),\n",
+       " Row(Number=62),\n",
+       " Row(Number=63),\n",
+       " Row(Number=64),\n",
+       " Row(Number=65),\n",
+       " Row(Number=66),\n",
+       " Row(Number=67),\n",
+       " Row(Number=68),\n",
+       " Row(Number=69),\n",
+       " Row(Number=70),\n",
+       " Row(Number=71),\n",
+       " Row(Number=72),\n",
+       " Row(Number=73),\n",
+       " Row(Number=74),\n",
+       " Row(Number=75),\n",
+       " Row(Number=76),\n",
+       " Row(Number=77),\n",
+       " Row(Number=78),\n",
+       " Row(Number=79),\n",
+       " Row(Number=80),\n",
+       " Row(Number=81),\n",
+       " Row(Number=82),\n",
+       " Row(Number=83),\n",
+       " Row(Number=84),\n",
+       " Row(Number=85),\n",
+       " Row(Number=86),\n",
+       " Row(Number=87),\n",
+       " Row(Number=88),\n",
+       " Row(Number=89),\n",
+       " Row(Number=90),\n",
+       " Row(Number=91),\n",
+       " Row(Number=92),\n",
+       " Row(Number=93),\n",
+       " Row(Number=94),\n",
+       " Row(Number=95),\n",
+       " Row(Number=96),\n",
+       " Row(Number=97),\n",
+       " Row(Number=98),\n",
+       " Row(Number=99)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = spark.range(100).toDF('Number')\n",
     "data.collect()"
@@ -53,20 +173,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|Number|\n",
+      "+------+\n",
+      "|     0|\n",
+      "|     1|\n",
+      "|     2|\n",
+      "|     3|\n",
+      "|     4|\n",
+      "|     5|\n",
+      "|     6|\n",
+      "|     7|\n",
+      "|     8|\n",
+      "|     9|\n",
+      "|    10|\n",
+      "|    11|\n",
+      "|    12|\n",
+      "|    13|\n",
+      "|    14|\n",
+      "|    15|\n",
+      "|    16|\n",
+      "|    17|\n",
+      "|    18|\n",
+      "|    19|\n",
+      "+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'http://localhost:4041'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc.uiWebUrl"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "even_data = data.where('Number % 2 = 0')"
+    "where"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|Number|\n",
+      "+------+\n",
+      "|     0|\n",
+      "|     2|\n",
+      "|     4|\n",
+      "|     6|\n",
+      "|     8|\n",
+      "|    10|\n",
+      "|    12|\n",
+      "|    14|\n",
+      "|    16|\n",
+      "|    18|\n",
+      "|    20|\n",
+      "|    22|\n",
+      "|    24|\n",
+      "|    26|\n",
+      "|    28|\n",
+      "|    30|\n",
+      "|    32|\n",
+      "|    34|\n",
+      "|    36|\n",
+      "|    38|\n",
+      "+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_data = data.where('Number % 2 = 0')\n",
+    "even_data.show()"
    ]
   },
   {
@@ -78,15 +292,6 @@
     "fetch one row from our source data, the most efficient way to execute this is to access the single\n",
     "record that we need. Spark will actually optimize this for us by pushing the filter down\n",
     "automatically."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "even_data.collect()"
    ]
   },
   {
@@ -112,6 +317,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "take"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -130,6 +342,13 @@
    ],
    "source": [
     "Summary_2015.take(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "explain"
    ]
   },
   {
@@ -183,12 +402,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "createOrReplaceTempView"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "Summary_2015.createOrReplaceTempView('data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "spark.sql"
    ]
   },
   {
@@ -237,9 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can express your business logic in SQL or DataFrames (either in R, Python, Scala, or Java) and Spark will\n",
-    "compile that logic down to an underlying plan (that you can see in the explain plan) before\n",
-    "actually executing your code. With Spark SQL, you can register any DataFrame as a table or\n",
+    "You can express your business logic in SQL or DataFrames (either in R, Python, Scala, or Java) and Spark will compile that logic down to an underlying plan (that you can see in the explain plan) before actually executing your code. With Spark SQL, you can register any DataFrame as a table or\n",
     "view (a temporary table) and query it using pure SQL. There is no performance difference\n",
     "between writing SQL queries or writing DataFrame code, they both “compile” to the same\n",
     "underlying plan that we specify in DataFrame code."
@@ -286,6 +517,13 @@
     "\n",
     "sqlWay.explain()\n",
     "dataFrameWay.explain()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "spark sql functions"
    ]
   },
   {
@@ -341,6 +579,13 @@
     "LIMIT 5\n",
     "\"\"\")\n",
     "maxSql.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cache"
    ]
   },
   {
@@ -433,8 +678,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Triple quotes allow line breaks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -457,8 +709,7 @@
    "source": [
     "spark.sql('''select DEST_COUNTRY_NAME, sum(count) as destination_total from data\n",
     "          group by 1 order by destination_total desc limit 5''').show()\n",
-    "\n",
-    "# ''' Triple quotes allow line breaks'''"
+    "\n"
    ]
   },
   {
@@ -601,6 +852,13 @@
     "spark.sql('''select CustomerID, Date(InvoiceDate), DATE_ADD(InvoiceDate, 1),sum(UnitPrice * Quantity)\n",
     "           from retail_Table group by CustomerID,Date(InvoiceDate), DATE_ADD(InvoiceDate, 1)\n",
     "          order by sum(UnitPrice * Quantity)''').show(truncate=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "selectExpr"
    ]
   },
   {
@@ -762,6 +1020,13 @@
     ".queryName(\"customer_purchases\")\\\n",
     ".outputMode(\"complete\")\\\n",
     ".start()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spark Streaming VS Structured Streaming"
    ]
   },
   {
@@ -938,12 +1203,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "page 66"
+    "Defining Schema"
    ]
   },
   {
@@ -988,6 +1251,13 @@
     "complex types in Chapter 6.\n",
     "In the simplest case, an expression, created via the expr function, is just a DataFrame column\n",
     "reference. In the simplest case, expr(\"someCol\") is equivalent to col(\"someCol\")."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spark SQL function - expr"
    ]
   },
   {
@@ -1054,12 +1324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import Row\n",
-    "# myRow = Row(\"Hello\", None, 1, False)"
+    "myRow = Row(\"Hello\", None, 1, False)"
    ]
   },
   {
@@ -1293,6 +1563,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "String literals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Sometimes, we need to pass explicit values into Spark that are just a value (rather than a new\n",
     "column). This might be a constant value or something we’ll need to compare to later on. The\n",
     "way we do this is through literals"
@@ -1409,7 +1686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "reserved character and escape character"
+    "Reserved character and escape character"
    ]
   },
   {
@@ -1725,6 +2002,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "distinct"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
@@ -2006,6 +2290,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sortWithinPartitions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 180,
    "metadata": {},
@@ -2013,6 +2304,13 @@
    "source": [
     "data = spark.read.format(\"json\").load(\"C:/Users/varsh/Spark-The-Definitive-Guide/data/flight-data/json/*-summary.json\")\\\n",
     ".sortWithinPartitions(\"count\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "limit"
    ]
   },
   {
@@ -2039,6 +2337,13 @@
    ],
    "source": [
     "df.limit(5).show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "getNumPartitions"
    ]
   },
   {
@@ -2082,6 +2387,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "repartition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 185,
    "metadata": {},
@@ -2120,13 +2432,6 @@
    "source": [
     "df.repartition(5, col(\"DEST_COUNTRY_NAME\")).coalesce(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
