--- a/Dataframe.ipynb
+++ b/Dataframe.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,43 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <div>\n",
-       "                <p><b>SparkSession - hive</b></p>\n",
-       "                \n",
-       "        <div>\n",
-       "            <p><b>SparkContext</b></p>\n",
-       "\n",
-       "            <p><a href=\"http://pyspark-m.us-central1-f.c.nodal-empire-382814.internal:33561\">Spark UI</a></p>\n",
-       "\n",
-       "            <dl>\n",
-       "              <dt>Version</dt>\n",
-       "                <dd><code>v2.4.8</code></dd>\n",
-       "              <dt>Master</dt>\n",
-       "                <dd><code>yarn</code></dd>\n",
-       "              <dt>AppName</dt>\n",
-       "                <dd><code>PySparkShell</code></dd>\n",
-       "            </dl>\n",
-       "        </div>\n",
-       "        \n",
-       "            </div>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f4ef8c74a50>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession \\\n",
     "    .builder \\\n",
@@ -70,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +64,7 @@
        " ['en', 'Statue_of_Liberty_play', '2022-01-01', 3]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +154,7 @@
        " Row(Language_code='en', title='Statue_of_Liberty_play', date='2022-01-01', count=3)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +175,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +195,7 @@
        "pyspark.rdd.RDD"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,8 +205,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "printSchema()"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -269,28 +242,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "people_df = spark.read.csv('/user/root/people.csv')"
+    "people_df = spark.read.csv('C:/Users/varsh/Sample_Data/people.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---------------+-------+-------+------+--------------------+--------------------+----------+---------------+\n",
-      "|_c0|            _c1|    _c2|    _c3|   _c4|                 _c5|                 _c6|       _c7|            _c8|\n",
-      "+---+---------------+-------+-------+------+--------------------+--------------------+----------+---------------+\n",
-      "|  1|88F7B33d2bcf9f5| Shelby|Terrell|  Male|elijah57@example.net|001-084-906-7849x...|1945-10-26|Games developer|\n",
-      "|  2|f90cD3E76f1A9b9|Phillip|Summers|Female|bethany14@example...|   214.112.6044x4913|1910-03-24| Phytotherapist|\n",
-      "+---+---------------+-------+-------+------+--------------------+--------------------+----------+---------------+\n",
+      "+-----+---------------+----------+---------+------+--------------------+-----------------+-------------+------------+\n",
+      "|  _c0|            _c1|       _c2|      _c3|   _c4|                 _c5|              _c6|          _c7|         _c8|\n",
+      "+-----+---------------+----------+---------+------+--------------------+-----------------+-------------+------------+\n",
+      "|Index|        User Id|First Name|Last Name|   Sex|               Email|            Phone|Date of birth|   Job Title|\n",
+      "|    1|db484997Aa2e723|    Marcia| Morrison|Female|yvonnemcknight@ex...|892.956.5029x7469|   1963-06-30|Set designer|\n",
+      "+-----+---------------+----------+---------+------+--------------------+-----------------+-------------+------------+\n",
       "only showing top 2 rows\n",
       "\n"
      ]
@@ -302,19 +275,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+---------------+----------+---------+------+---------------------+----------------------+-------------+---------------+\n",
-      "|Index|User Id        |First Name|Last Name|Sex   |Email                |Phone                 |Date of birth|Job Title      |\n",
-      "+-----+---------------+----------+---------+------+---------------------+----------------------+-------------+---------------+\n",
-      "|1    |88F7B33d2bcf9f5|Shelby    |Terrell  |Male  |elijah57@example.net |001-084-906-7849x73518|1945-10-26   |Games developer|\n",
-      "|2    |f90cD3E76f1A9b9|Phillip   |Summers  |Female|bethany14@example.com|214.112.6044x4913     |1910-03-24   |Phytotherapist |\n",
-      "+-----+---------------+----------+---------+------+---------------------+----------------------+-------------+---------------+\n",
+      "+-----+---------------+----------+---------+------+--------------------------+-----------------+-------------+------------+\n",
+      "|Index|User Id        |First Name|Last Name|Sex   |Email                     |Phone            |Date of birth|Job Title   |\n",
+      "+-----+---------------+----------+---------+------+--------------------------+-----------------+-------------+------------+\n",
+      "|Index|User Id        |First Name|Last Name|Sex   |Email                     |Phone            |Date of birth|Job Title   |\n",
+      "|1    |db484997Aa2e723|Marcia    |Morrison |Female|yvonnemcknight@example.net|892.956.5029x7469|1963-06-30   |Set designer|\n",
+      "+-----+---------------+----------+---------+------+--------------------------+-----------------+-------------+------------+\n",
       "only showing top 2 rows\n",
       "\n"
      ]
@@ -328,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -363,27 +336,27 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- _c0: integer (nullable = true)\n",
+      " |-- _c0: string (nullable = true)\n",
       " |-- _c1: string (nullable = true)\n",
       " |-- _c2: string (nullable = true)\n",
       " |-- _c3: string (nullable = true)\n",
       " |-- _c4: string (nullable = true)\n",
       " |-- _c5: string (nullable = true)\n",
       " |-- _c6: string (nullable = true)\n",
-      " |-- _c7: timestamp (nullable = true)\n",
+      " |-- _c7: string (nullable = true)\n",
       " |-- _c8: string (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "people_df = spark.read.csv('/user/root/people.csv',inferSchema=True) #header = True if we have first row as header\n",
+    "people_df = spark.read.csv('C:/Users/varsh/Sample_Data/people.csv',inferSchema=True) #header = True if we have first row as header\n",
     "people_df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -391,46 +364,57 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- _c0: integer (nullable = true)\n",
-      " |-- _c1: string (nullable = true)\n",
-      " |-- _c2: string (nullable = true)\n",
-      " |-- _c3: string (nullable = true)\n",
-      " |-- _c4: string (nullable = true)\n",
-      " |-- _c5: string (nullable = true)\n",
-      " |-- _c6: string (nullable = true)\n",
-      " |-- _c7: timestamp (nullable = true)\n",
-      " |-- _c8: string (nullable = true)\n",
+      " |-- Index: integer (nullable = true)\n",
+      " |-- User Id: string (nullable = true)\n",
+      " |-- First Name: string (nullable = true)\n",
+      " |-- Last Name: string (nullable = true)\n",
+      " |-- Sex: string (nullable = true)\n",
+      " |-- Email: string (nullable = true)\n",
+      " |-- Phone: string (nullable = true)\n",
+      " |-- Date of birth: timestamp (nullable = true)\n",
+      " |-- Job Title: string (nullable = true)\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "people_df = spark.read.option('inferSchema',True).csv('/user/root/people.csv')\n",
+    "people_df = spark.read.option('inferSchema',True).option('header',True).csv('C:/Users/varsh/Sample_Data/people.csv')\n",
     "people_df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('_c0', 'int'),\n",
-       " ('_c1', 'string'),\n",
-       " ('_c2', 'string'),\n",
-       " ('_c3', 'string'),\n",
-       " ('_c4', 'string'),\n",
-       " ('_c5', 'string'),\n",
-       " ('_c6', 'string'),\n",
-       " ('_c7', 'timestamp'),\n",
-       " ('_c8', 'string')]"
+       "[('Index', 'int'),\n",
+       " ('User Id', 'string'),\n",
+       " ('First Name', 'string'),\n",
+       " ('Last Name', 'string'),\n",
+       " ('Sex', 'string'),\n",
+       " ('Email', 'string'),\n",
+       " ('Phone', 'string'),\n",
+       " ('Date of birth', 'timestamp'),\n",
+       " ('Job Title', 'string')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -446,27 +430,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[summary: string, _c0: string, _c1: string, _c2: string, _c3: string, _c4: string, _c5: string, _c6: string, _c8: string]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "people_df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1082,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
