--- a/spark_definitive_guide.ipynb
+++ b/spark_definitive_guide.ipynb
@@ -221,7 +221,7 @@
     {
      "data": {
       "text/plain": [
-       "'http://localhost:4041'"
+       "'http://localhost:4040'"
       ]
      },
      "execution_count": 6,
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,6 +284,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+\n",
+      "|Number|\n",
+      "+------+\n",
+      "|     0|\n",
+      "|     2|\n",
+      "|     4|\n",
+      "|     6|\n",
+      "|     8|\n",
+      "|    10|\n",
+      "|    12|\n",
+      "|    14|\n",
+      "|    16|\n",
+      "|    18|\n",
+      "|    20|\n",
+      "|    22|\n",
+      "|    24|\n",
+      "|    26|\n",
+      "|    28|\n",
+      "|    30|\n",
+      "|    32|\n",
+      "|    34|\n",
+      "|    36|\n",
+      "|    38|\n",
+      "+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "even_data = data.filter(even_data.Number%2 == 0)\n",
+    "even_data.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +378,55 @@
        " Row(DEST_COUNTRY_NAME='United States', ORIGIN_COUNTRY_NAME='Croatia', count=1)]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Summary_2015.take(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------+-------------------+-----+\n",
+      "|DEST_COUNTRY_NAME       |ORIGIN_COUNTRY_NAME|count|\n",
+      "+------------------------+-------------------+-----+\n",
+      "|United States           |Romania            |15   |\n",
+      "|United States           |Croatia            |1    |\n",
+      "|United States           |Ireland            |344  |\n",
+      "|Egypt                   |United States      |15   |\n",
+      "|United States           |India              |62   |\n",
+      "|United States           |Singapore          |1    |\n",
+      "|United States           |Grenada            |62   |\n",
+      "|Costa Rica              |United States      |588  |\n",
+      "|Senegal                 |United States      |40   |\n",
+      "|Moldova                 |United States      |1    |\n",
+      "|United States           |Sint Maarten       |325  |\n",
+      "|United States           |Marshall Islands   |39   |\n",
+      "|Guyana                  |United States      |64   |\n",
+      "|Malta                   |United States      |1    |\n",
+      "|Anguilla                |United States      |41   |\n",
+      "|Bolivia                 |United States      |30   |\n",
+      "|United States           |Paraguay           |6    |\n",
+      "|Algeria                 |United States      |4    |\n",
+      "|Turks and Caicos Islands|United States      |230  |\n",
+      "|United States           |Gibraltar          |1    |\n",
+      "+------------------------+-------------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "Summary_2015.show(truncate=False)"
    ]
   },
   {
@@ -353,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +447,9 @@
      "text": [
       "== Physical Plan ==\n",
       "AdaptiveSparkPlan isFinalPlan=false\n",
-      "+- Sort [count#46 ASC NULLS FIRST], true, 0\n",
-      "   +- Exchange rangepartitioning(count#46 ASC NULLS FIRST, 200), ENSURE_REQUIREMENTS, [plan_id=75]\n",
-      "      +- FileScan csv [DEST_COUNTRY_NAME#44,ORIGIN_COUNTRY_NAME#45,count#46] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/Users/varsh/Downloads/2015-summary.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
+      "+- Sort [count#43 ASC NULLS FIRST], true, 0\n",
+      "   +- Exchange rangepartitioning(count#43 ASC NULLS FIRST, 200), ENSURE_REQUIREMENTS, [plan_id=125]\n",
+      "      +- FileScan csv [DEST_COUNTRY_NAME#41,ORIGIN_COUNTRY_NAME#42,count#43] Batched: false, DataFilters: [], Format: CSV, Location: InMemoryFileIndex(1 paths)[file:/C:/Users/varsh/Downloads/2015-summary.csv], PartitionFilters: [], PushedFilters: [], ReadSchema: struct<DEST_COUNTRY_NAME:string,ORIGIN_COUNTRY_NAME:string,count:int>\n",
       "\n",
       "\n"
      ]
@@ -376,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +471,7 @@
        " Row(DEST_COUNTRY_NAME='Moldova', ORIGIN_COUNTRY_NAME='United States', count=1)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +622,7 @@
        "[Row(max(count)=370002)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,6 +631,40 @@
     "from pyspark.sql.functions import max\n",
     "\n",
     "Summary_2015.select(max(\"count\")).take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxCount = Summary_2015.select(max(\"count\"))\n",
+    "\n",
+    "maxCount.write.parquet('C:/Users/varsh/outputs/maxCount')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+\n",
+      "|max(count)|\n",
+      "+----------+\n",
+      "|    370002|\n",
+      "+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "CountMax = spark.read.format('parquet').load('C:/Users/varsh/outputs/maxCount')\n",
+    "CountMax.show()"
    ]
   },
   {
@@ -714,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -726,15 +845,16 @@
       "+-----------------+-------------------+-----+\n",
       "|           Zambia|      United States|    1|\n",
       "|        Venezuela|      United States|  290|\n",
-      "|          Uruguay|      United States|   43|\n",
       "+-----------------+-------------------+-----+\n",
-      "only showing top 3 rows\n",
+      "only showing top 2 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "Summary_2015.sort(desc('DEST_COUNTRY_NAME')).show(3)"
+    "# Summary_2015.sort(desc('DEST_COUNTRY_NAME')).show(3)\n",
+    "\n",
+    "Summary_2015.sort(Summary_2015.DEST_COUNTRY_NAME,ascending=False).show(2)"
    ]
   },
   {
@@ -746,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
